postgres_tests/comments/expected.txt

-----------
QUERY:
--
-- COMMENTS
--

SELECT 'trailing' AS first;
RESULT:
	postgres: [('trailing',)]

-----------
QUERY:
 -- trailing single line
SELECT /* embedded single line */ 'embedded' AS second;
RESULT:
	postgres: [('embedded',)]

-----------
QUERY:

SELECT /* both embedded and trailing single line */ 'both' AS third;
RESULT:
	postgres: [('both',)]

-----------
QUERY:
 -- trailing single line

SELECT 'before multi-line' AS fourth;
RESULT:
	postgres: [('before multi-line',)]

-----------
QUERY:

/* This is an example of SQL which should not execute:
 * select 'multi-line';
RESULT:
	postgres: unterminated /* comment at or near "/* This is an example of SQL which should not execute:
 * select 'multi-line';"
LINE 2: /* This is an example of SQL which should not execute:
        ^


-----------
QUERY:

 */
SELECT 'after multi-line' AS fifth;
RESULT:
	postgres: syntax error at or near "*/"
LINE 2:  */
         ^


-----------
QUERY:


--
-- Nested comments
--

/*
SELECT 'trailing' as x1;
RESULT:
	postgres: unterminated /* comment at or near "/*
SELECT 'trailing' as x1;"
LINE 7: /*
        ^


-----------
QUERY:
 -- inside block comment
*/

/* This block comment surrounds a query which itself has a block comment...
SELECT /* embedded single line */ 'embedded' AS x2;
RESULT:
	postgres: syntax error at or near "*/"
LINE 2: */
        ^


-----------
QUERY:

*/

SELECT -- continued after the following block comments...
/* Deeply nested comment.
   This includes a single apostrophe to make sure we aren't decoding this part as a string.
SELECT 'deep nest' AS n1;
RESULT:
	postgres: syntax error at or near "*/"
LINE 2: */
        ^


-----------
QUERY:

/* Second level of nesting...
SELECT 'deeper nest' as n2;
RESULT:
	postgres: unterminated /* comment at or near "/* Second level of nesting...
SELECT 'deeper nest' as n2;"
LINE 2: /* Second level of nesting...
        ^


-----------
QUERY:

/* Third level of nesting...
SELECT 'deepest nest' as n3;
RESULT:
	postgres: unterminated /* comment at or near "/* Third level of nesting...
SELECT 'deepest nest' as n3;"
LINE 2: /* Third level of nesting...
        ^


-----------
QUERY:

*/
Hoo boy. Still two deep...
*/
Now just one deep...
*/
'deeply nested example' AS sixth;
RESULT:
	postgres: syntax error at or near "*/"
LINE 2: */
        ^

